--- a/main/4imageGallery.html
+++ b/main/4imageGallery.html
@@ -3,8 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Image Gallery</title>
+        <link rel="stylesheet" href="styles/layout.css" media="screen"/>
     </head>
     <body>
         <h1>snapshots</h1>
+        <ul>
+            <li>
+                <a href="images/crystal.jpg" title="Crystal Liu's beatiful picture" class="popup">Crystal</a>
+            </li>
+            <li>
+                <a href="images/yang.jpg" title="Yang yang's handsome picture" class="popup">Yang</a>
+            </li>
+            <li>
+                <a href="images/zoro.jpg" title="Zoro's cool picture" class="popup">Zoro</a>
+            </li>
+            <li>
+                <a href="images/rabbit.jpg" title="Rabbit's cute picture" class="popup" >Rabbit</a>
+            </li>
+        </ul>
+        <img id="placeholder" src="images/kong.jpg" alt="my image gallery"/>
+        <p id="description">Choose an image.</p>
+        <script src="scripts/showPic.js"></script>
     </body>
 </html>
