--- a/main/4imageGallery.html
+++ b/main/4imageGallery.html
@@ -3,22 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Image Gallery</title>
-        <link rel="stylesheet" href="styles/layout.css" media="screen"/>
+        <link rel="stylesheet" href="styles/layout.css" media="screen"/>        
     </head>
     <body>
         <h1>snapshots</h1>
-        <ul>
+        <ul id="imagegallery">
             <li>
-                <a href="images/crystal.jpg" title="Crystal Liu's beatiful picture" class="popup">Crystal</a>
+                <a href="images/crystal.jpg" title="Crystal Liu's beatiful picture" class="popup">
+                    <img src="images/crystal.jpg" alt="Crystal"/>
+                </a>
             </li>
             <li>
-                <a href="images/yang.jpg" title="Yang yang's handsome picture" class="popup">Yang</a>
+                <a href="images/yang.jpg" title="Yang yang's handsome picture" class="popup">
+                    <img src="images/yang.jpg" alt="Yang yang"/>
+                </a>
             </li>
             <li>
-                <a href="images/zoro.jpg" title="Zoro's cool picture" class="popup">Zoro</a>
+                <a href="images/zoro.jpg" title="Zoro's cool picture" class="popup">
+                    <img src="images/zoro.jpg" alt="Zoro"/>
+                </a>
             </li>
             <li>
-                <a href="images/rabbit.jpg" title="Rabbit's cute picture" class="popup" >Rabbit</a>
+                <a href="images/rabbit.jpg" title="Rabbit's cute picture" class="popup">
+                    <img src="images/rabbit.jpg" alt="Rabbit"/>
+                </a>
             </li>
         </ul>
         <img id="placeholder" src="images/kong.jpg" alt="my image gallery"/>
