--- a/main/4imageGallery.html
+++ b/main/4imageGallery.html
@@ -29,8 +29,10 @@
                 </a>
             </li>
         </ul>
+        <!--第七章动态创建标记
         <img id="placeholder" src="images/kong.jpg" alt="my image gallery"/>
         <p id="description">Choose an image.</p>
+        -->
         <script src="scripts/showPic.js"></script>
     </body>
 </html>
