--- a/main/explanation.html
+++ b/main/explanation.html
@@ -18,7 +18,6 @@
             structure and style of document.
         </p>
         </blockquote>
-        </p>
         <p>
             It is an <abbr title="Application Programming Interface">API</abbr>
             that can be used to navigate <abbr title="HyperText Markup Language">HTML</abbr>
@@ -26,5 +25,6 @@
         </p>
         <script src="scripts/addLoadEvent.js"></script>
         <script src="scripts/displayAbbreviations.js"></script>
+        <script src="scripts/displayCitations.js"></script>
     </body>
 </html>
