--- a/main/explanation.html
+++ b/main/explanation.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" media="screen" href="styles/typogeaphy.css"/>
     </head>
     <body>
+        <ul id="navigation">
+            <li><a href="index.html" accesskey="1">Home</a></li>
+            <li><a href="search.html" accesskey="4">Search</a></li>
+            <li><a href="contact.html" accesskey="0">Contact</a></li>
+        </ul>
         <h1>What is the Document Object Model?</h1>
         <p>
             The <abbr title="World Wide Web Consortium">W3C</abbr>
@@ -26,5 +31,6 @@
         <script src="scripts/addLoadEvent.js"></script>
         <script src="scripts/displayAbbreviations.js"></script>
         <script src="scripts/displayCitations.js"></script>
+        <script src="scripts/displayAccesskeys.js"></script>
     </body>
 </html>
