--- a/main/10message.html
+++ b/main/10message.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <p id="message">Young!</p>
+        <p id="message2">Crystal!</p>
+        <script src="scripts/addLoadEvent.js"></script>
+        <script src="scripts/moveElement.js"></script>
     </body>
 </html>
