--- a/main/10message.html
+++ b/main/10message.html
@@ -9,5 +9,6 @@
         <p id="message2">Crystal!</p>
         <script src="scripts/addLoadEvent.js"></script>
         <script src="scripts/moveElement.js"></script>
+        <script src="scripts/positionMessage.js"></script>
     </body>
 </html>
