about and live and photos

--- a/project/photos.html
+++ b/project/photos.html
@@ -19,6 +19,51 @@
                 </ul>
             </nav>
         </header>
+        <article>
+            <h1>海贼王图片集</h1>
+            <ul id="imagegallery">
+                <li>
+                    <a href="images/imagegallery/haijun.gif" title="The back of the admiral.">
+                     <img src="images/imagegallery/haijun_s.gif" alt="haijun_s big"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/luffyzoro.jpg" title="Luffy and Zoro are meeting!">
+                     <img src="images/imagegallery/luffyzoro_s.gif" alt="luffyzoro_s in peace"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/luo.gif" title="Law is carrying Chopper hahaha...">
+                     <img src="images/imagegallery/luo_s.gif" alt="luo_s carry chopper"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/luzosa.jpg" title="Luffy、Zoro and Sanji are funny~">
+                     <img src="images/imagegallery/luzosa_s.gif" alt="luffy_s zoro_s and sanji_s"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/max.gif" title="The superstars in One Peace.">
+                     <img src="images/imagegallery/max_s.gif" alt="max_s all people"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/warrant.gif" title="A reward for a group of straw hats.">
+                     <img src="images/imagegallery/warrant_s.gif" alt="warrant_s straw hat"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/seven.gif" title="The world's governments are recognized as the seven sea thieves.">
+                     <img src="images/imagegallery/seven_s.gif" alt="seven_s awesome"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="images/imagegallery/zorodrink.gif" title="Zoro is drinking. Soooooo cool!">
+                     <img src="images/imagegallery/zorodrink_s.gif" alt="zoro_s is drinking"/>
+                    </a>
+                </li>
+            </ul>
+        </article>
         <script src="scripts/global.js"></script>
     </body>
 </html>
