--- a/project/submit.html
+++ b/project/submit.html
@@ -20,13 +20,8 @@
             </nav>
         </header>
         <article>
-            <h1>欢迎！</h1>
-            <p id="intro">
-                欢迎来到海贼王介绍网站！在这里，你可以<a href="about.html" title="About">查看海贼王的更多信息</a>，
-                观赏<a href="photos.html" title="Photos">草帽一伙的照片</a>，
-                查找海贼王<a href="live.html" title="Live">作品集列表</a>或者
-                <a href="contact.html" title="Contact">跟我们联系</a>。
-            </p>
+            <h1>感谢</h1>
+            <p>非常感谢您向我们联系，我们会尽快给你们回复。</p>
         </article>
         <script src="scripts/global.js"></script>
     </body>
