--- a/project/about.html
+++ b/project/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>One Piece Band</title>
-        <script src="/modernizr.js"></script>
+        <script src="../modernizr.js"></script>
         <link rel="stylesheet" media="screen" href="styles/basic.css"/>
     </head>
     <body>
