--- a/project/index.html
+++ b/project/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--项目实现海贼王网页 参考DOM书-->
     <head>
         <meta charset="utf-8"/>
         <title>One Piece Band</title>
