--- a/project/index.html
+++ b/project/index.html
@@ -23,7 +23,7 @@
         <article>
             <h1>欢迎！</h1>
             <p id="intro">
-                欢迎来到海贼王介绍网站！在这里，你可以<a href="about.html" title="About">查看海贼王的更多信息</a>，
+                欢迎来到海贼王介绍网站！在这里，你可以<a href="about.html" title="About00">查看海贼王的更多信息</a>，
                 观赏<a href="photos.html" title="Photos">草帽一伙的照片</a>，
                 查找海贼王<a href="live.html" title="Live">作品集列表</a>或者
                 <a href="contact.html" title="Contact">跟我们联系</a>。
