--- a/DataStructures/图/test.html
+++ b/DataStructures/图/test.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script type="module" src="./BFS.js"></script>
+  <script type="module" src="./topsort.js"></script>
 </body>
 </html>
